# Airpope

./: .flake8  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  INTERCEPTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: 01_report_issue.yml  02_feature_request.yml  03_source_request.yml  04_questions.yml
.github/workflows/: ci.yml  issue-management.yml  lint.yml  lock.yml  publish.yml
airpope/: Cargo.toml  README.md  build.rs
airpope/src/: cli.rs  config.rs  main.rs  term.rs  updater.rs  win_term.rs
airpope/src/impl/: client.rs  common.rs  mod.rs  models.rs  parser.rs
airpope/src/impl/amap/: accounts.rs  common.rs  config.rs  download.rs  favorites.rs  manga.rs  mod.rs  purchases.rs  rankings.rs
airpope/src/impl/kmkc/: accounts.rs  common.rs  config.rs  download.rs  favorites.rs  manga.rs  mod.rs  purchases.rs  rankings.rs
airpope/src/impl/musq/: accounts.rs  common.rs  config.rs  download.rs  favorites.rs  manga.rs  mod.rs  purchases.rs  rankings.rs
airpope/src/impl/rbean/: accounts.rs  common.rs  config.rs  download.rs  favorites.rs  manga.rs  mod.rs  rankings.rs
airpope/src/impl/sjv/: accounts.rs  common.rs  config.rs  download.rs  manga.rs  mod.rs
airpope/src/impl/tools/: merger.rs  mod.rs
airpope_amap/: Cargo.toml  README.md
airpope_amap/src/: config.rs  constants.rs  helper.rs  lib.rs
airpope_amap/src/models/: accounts.rs  comic.rs  common.rs  enums.rs  errors.rs  mod.rs
airpope_kmkc/src/: constants.rs  lib.rs
airpope_kmkc/src/models/: datetime.rs  mod.rs  other.rs  titles.rs
pipelines/: multi-lint.py
scripts/: check_dependency_graph.py  crates_publish.py  create_changelog.py  prepare_publish.py  prepare_test_fixtures.py  tarpaulin_coverage.py
tests/: __init__.py  test_utils.py
tests/fixtures/: __init__.py  helper.py
tests/fixtures/image_descramble/: expects.tmfxture
tests/fixtures/musq_chapterview/: source.tmfxture
tests/fixtures/musq_homev2/: source.tmfxture
tests/fixtures/musq_mangadetail/: source.tmfxture
tests/fixtures/musq_mangadetailv2/: source.tmfxture
tests/fixtures/musq_pointshop/: source.tmfxture
tests/fixtures/musq_weekly/: source.tmfxture
tests/sources/: __init__.py
tests/sources/kmkc/: __init__.py  test_imaging.py
tests/sources/musq/: __init__.py  test_conifg.py  test_models.py  test_proto.py
tosho/: Cargo.toml  README.md  build.rs
tosho/src/: cli.rs  config.rs  main.rs  term.rs  updater.rs
tosho/src/impl/: client.rs  mod.rs  models.rs  parser.rs
tosho/src/impl/amap/: accounts.rs  common.rs  config.rs  download.rs  favorites.rs  manga.rs  mod.rs  purchases.rs  rankings.rs
tosho/src/impl/kmkc/: accounts.rs  common.rs  config.rs  download.rs  favorites.rs  manga.rs  mod.rs  purchases.rs  rankings.rs
tosho/src/impl/musq/: accounts.rs  common.rs  download.rs  favorites.rs  manga.rs  mod.rs  purchases.rs  rankings.rs
tosho/src/impl/rbean/: config.rs  download.rs  manga.rs  mod.rs  rankings.rs
tosho/src/impl/sjv/: accounts.rs  common.rs  config.rs  download.rs  manga.rs  mod.rs
tosho/src/impl/tools/: merger.rs
tosho_amap/: Cargo.toml  README.md
tosho_amap/src/: config.rs  constants.rs  helper.rs  lib.rs
tosho_amap/src/models/: accounts.rs  comic.rs  common.rs  enums.rs  errors.rs  mod.rs
tosho_kmkc/: Cargo.toml  README.md
tosho_kmkc/src/: config.rs  constants.rs  imaging.rs  lib.rs
tosho_kmkc/src/models/: account.rs  common.rs  enums.rs  episode.rs  errors.rs  mod.rs  other.rs  titles.rs
tosho_kmkc/tests/: descramble_out.tmfxture  descramble_src.tmfxture  descramble_test.rs
tosho_macros/: Cargo.toml  README.md
tosho_macros/src/: lib.rs
tosho_mango/: __init__.py  _metadata.py  cmd.py  constants.py  models.py  term.py  utils.py
tosho_mango/cli/: __init__.py  base.py  importer.py  manager.py
tosho_mango/cli/impl/: __init__.py  options.py
tosho_mango/cli/impl/kmkc/: __init__.py  accounts.py  balance.py  common.py  download.py  manga.py  purchases.py  rankings.py
tosho_mango/cli/impl/musq/: __init__.py  accounts.py  balance.py  common.py  download.py  favorites.py  manga.py  options.py  purchases.py  rankings.py
tosho_mango/cli/impl/tools/: __init__.py  merger.py
tosho_mango/sources/: __init__.py
tosho_mango/sources/kmkc/: __init__.py  client.py  config.py  constants.py  dto.py  errors.py  imaging.py  models.py
tosho_mango/sources/musq/: __init__.py  client.py  config.py  constants.py  models.py  proto.py
tosho_musq/: Cargo.toml  README.md
tosho_musq/src/: constants.rs  helper.rs  lib.rs
tosho_musq/src/proto/: account.rs  chapter.rs  enums.rs  manga.rs  mod.rs  point.rs
tosho_musq/tests/: chapterview_v2.tmfxture  coinhistory.tmfxture  mypage.tmfxture  proto_test.rs
tosho_rbean/: Cargo.toml  README.md
tosho_rbean/src/: config.rs  constants.rs  lib.rs
tosho_rbean/src/models/: accounts.rs  chapters.rs  common.rs  datetime.rs  enums.rs  image.rs  manga.rs  mod.rs
tosho_sjv/: Cargo.toml  README.md
tosho_sjv/src/: config.rs  constants.rs  helper.rs  imaging.rs  lib.rs
tosho_sjv/src/models/: account.rs  datetime.rs  enums.rs  manga.rs  mod.rs
tosho_sjv/tests/: manga_detail.tmfxture  models_test.rs  store_cached.tmfxture  store_cached_alt.tmfxture
