[workspace]
resolver = "2"
members = [
    "tosho",
    "tosho_musq",
    "tosho_kmkc",
    "tosho_amap",
    "tosho_sjv",
    "tosho_rbean",
    "tosho_macros",
]

[workspace.package]
version = "0.4.3-dev"
edition = "2021"
authors = ["noaione <noaione@n4o.xyz>"]
license = "MIT"
repository = "https://github.com/noaione/tosho-mango"
homepage = "https://github.com/noaione/tosho-mango"

[workspace.dependencies]
tokio = { version = "1.36.0", features = ["full"] }
reqwest = { version = "0.11.25", features = ["socks"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
prost = "0.12.3"
lazy_static = "1"
anyhow = "1"
base64 = "0.22.0"
chrono = "0.4"
futures-util = "0.3"
reqwest_cookie_store = "0.6.0"
sha2 = "0.10.8"
time = "0.3.34"
image = { version = "0.25.0", default-features = false, features = ["jpeg", "png", "rayon"] }
rand = "0.8.5"

# CI-PROFILE-MARK
