[workspace]
resolver = "2"
members = [
    "tosho",
    "tosho_musq",
    "tosho_kmkc",
    "tosho_amap",
    "tosho_sjv",
    "tosho_rbean",
    "tosho_macros",
]

[workspace.package]
version = "0.4.4-dev"
edition = "2021"
authors = ["noaione <noaione@n4o.xyz>"]
license = "MIT"
repository = "https://github.com/noaione/tosho-mango"
homepage = "https://tosho.dev"

[workspace.dependencies]
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.4", features = ["rustls-tls", "socks", "stream"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
prost = "0.12.4"
lazy_static = "1"
anyhow = "1"
base64 = "0.22.0"
chrono = "0.4"
futures-util = "0.3"
reqwest_cookie_store = "0.7.0"
sha2 = "0.10.8"
time = "0.3.36"
image = { version = "0.25.1", default-features = false, features = ["jpeg", "png", "rayon"] }
rand = "0.8.5"

# CI-PROFILE-MARK
