[tool.poetry]
name = "tosho-mango"
version = "0.1.0"
description = "A downloader for some official mango website"
authors = ["noaione <noaione@n4o.xyz>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tosho_mango"}]

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^10.0.0"
msgspec = "^0.16.0"
betterproto = "^1.2.5"
requests = "^2.31.0"
click = "^8.1.3"
rich = "^13.4.2"
inquirer = "^3.1.3"
orjson = "^3.9.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
ruff = "^0.0.277"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
tosho = "tosho_mango.cmd:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E203", "F405", "F403", "F722"]
line-length = 120
exclude = [
    "env",
    "venv",
    ".pytest_cache",
    ".venv",
    "__pycache__",
    ".git",
    ".mypy_cache",
    ".vscode",
    ".ruff_cache",
    "Lib"
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
extend_skip = ["env/**", "venv/**", ".pytest_cache/**", ".venv/**", "__pycache__/**"]
line_length = 110
skip_gitignore = true

[tool.pyright]
include = ["tosho_mango", "pipelines", "tests"]
exclude = ["venv", "env", "node_modules", ".venv", ".env", ".nox", ".pytest_cache", ".mypy_cache", ".tox", "build", "dist", "_build", "**/__pycache__"]
ignore = ["_testing"]
stubPath = "./stubs"

reportMissingImports = true
venv = "."

pythonVersion = "3.10"

[tool.coverage.run]
source = ["tosho_mango"]
branch = true
omit = [
    "tests/*",
    "tosho_mango/cli/*",
    "tosho_mango/_metadata.py",
    "tosho_mango/**/__init__.py",
    "tosho_mango/**/constants.py",
    "tosho_mango/cmd.py",
    "tosho_mango/term.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
precision = 2
fail_under = 30

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "-v --cov=tosho_mango --cov-config=pyproject.toml --cov-report=lcov --cov-report=term-missing"
