[package]
name = "airpope"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["cli", "downloader"]
description = "A downloader for some official mango website"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Sources deps
airpope-musq = { path = "../airpope_musq", version = "=0.3.4" }
airpope-kmkc = { path = "../airpope_kmkc", version = "=0.3.4" }
airpope-amap = { path = "../airpope_amap", version = "=0.3.3" }
airpope-sjv = { path = "../airpope_sjv", version = "=0.3.5" }
airpope-rbean = { path = "../airpope_rbean", version = "=0.1.3" }
airpope-macros = { path = "../airpope_macros", version = "0.3" }

# External deps
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
prost.workspace = true
anyhow.workspace = true
lazy_static.workspace = true
chrono.workspace = true
reqwest.workspace = true
aho-corasick = "1.1.3"
secular = "1.0.1"
futures = "0.3.30"

# CLI deps
clap = { version = "4.5.4", features = ["derive"] }
anstream = "0.6.13"
color-print = "0.3.6"
inquire = "0.7.5"
indicatif = "0.17.8"
directories = "5.0.1"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
glob = "0.3.1"
supports-hyperlinks = "3.0.0"
num-format = "0.4.4"
regex = "1.10.4"
mime_guess = "2.0.4"

self_update = { version = "0.40.0", features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"] }

# Windows deps
windows-sys = { version = "0.52.0", features = ["Win32_Foundation", "Win32_System_Console"] }

[build-dependencies]
winres = "0.1"
