[package]
name = "airpope-amap"
version = "0.3.3"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["api", "library"]
description = "An asynchronous client of AM API by AP."
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
reqwest = { workspace = true, features = ["cookies", "json"] }
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
lazy_static.workspace = true
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
time.workspace = true
reqwest_cookie_store.workspace = true
sha2.workspace = true
rand.workspace = true

airpope-macros = { path = "../airpope_macros", version = "0.3" }
