[package]
name = "tosho"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["cli", "downloader"]
description = "A downloader for some official mango website"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Sources deps
tosho-musq = { path = "../tosho_musq" }
tosho-kmkc = { path = "../tosho_kmkc" }
tosho-amap = { path = "../tosho_amap" }
tosho-sjv = { path = "../tosho_sjv" }
tosho-macros = { path = "../tosho_macros" }

# External deps
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
prost.workspace = true
anyhow.workspace = true
lazy_static.workspace = true
chrono.workspace = true
reqwest.workspace = true
aho-corasick = "1.1.2"
diacritics = "0.2.0"

# CLI deps
clap = { version = "4.4.18", features = ["derive"] }
anstream = "0.6.11"
color-print = "0.3.5"
inquire = "0.6.2"
indicatif = "0.17.7"
directories = "5.0.1"
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
glob = "0.3.1"
supports-hyperlinks = "3.0.0"
num-format = "0.4.4"
regex = "1.10.3"
mime_guess = "2.0.4"

[target.'cfg(windows)'.dependencies]
# Windows deps
windows-sys = { version = "0.52.0", features = ["Win32_Foundation", "Win32_System_Console"] }

[build-dependencies]
winres = "0.1"
