[package]
name = "tosho-amap"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "An asynchronous client of AM API by AP."
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
reqwest = { workspace = true, features = ["cookies", "stream", "json"] }
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
lazy_static.workspace = true
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
time.workspace = true
cookie_store.workspace = true
reqwest_cookie_store.workspace = true
sha2.workspace = true
rand = "0.8.5"

tosho-macros = { path = "../tosho_macros" }
