[package]
name = "tosho-kmkc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "An asynchronous client of KM API by KC."
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
reqwest = { workspace = true, features = ["cookies", "stream"] }
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
lazy_static.workspace = true
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
image = "0.24.7"
time = "*"
cookie_store = "0.20.0"
reqwest_cookie_store = "0.6.0"
urlencoding = "2.1.3"
sha2 = "0.10.8"
md-5 = "0.10.6"
documented = "*"

tosho-macros = { path = "../tosho_macros" }
