[package]
name = "tosho-musq"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "An asynchronous client of MU! API by SQ."
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
serde.workspace = true
prost.workspace = true
lazy_static.workspace = true
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
reqwest = { workspace = true, features = ["stream"] }
futures-util.workspace = true

tosho-macros = { path = "../tosho_macros" }
