[package]
name = "tosho-musq"
version = "0.3.2"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["api", "library"]
description = "An asynchronous client of MU! API by SQ."
readme = "./README.md"
# Do not include tests in crates.io package
exclude = [
    "tests/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
serde.workspace = true
prost.workspace = true
lazy_static.workspace = true
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
reqwest = { workspace = true, features = ["stream"] }
futures-util.workspace = true

tosho-macros = { path = "../tosho_macros", version = "0.3" }
