[package]
name = "airpope-rbean"
version = "0.1.3"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["api", "library"]
description = "An asynchronous client for 小豆 (Red Bean)"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
reqwest = { workspace = true, features = ["json"] }
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
lazy_static.workspace = true
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true

airpope-macros = { path = "../airpope_macros", version = "0.3" }
