[package]
name = "tosho-sjv"
version = "0.3.5"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["api", "library"]
description = "An asynchronous client of SJ/M by V"
readme = "./README.md"
# Do not include tests in crates.io package
exclude = [
    "tests/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
reqwest = { workspace = true, features = ["json"] }
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
lazy_static.workspace = true
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
image.workspace = true
rand.workspace = true
kamadak-exif = "0.5.5"

tosho-macros = { path = "../tosho_macros", version = "0.3" }
